requerements.txt fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-requests~=2.18.4
-pypdf2~=3.0.1
-docx~=0.2.4
-partd~=0.3.8
-striprtf~=0.0.22
-urllib3~=1.22
-patool~=1.12
-pandas~=0.22.0
-beautifulsoup4~=4.6.0
-humanize~=3.14.0
+requests
+pypdf2
+python-docx
+partd
+striprtf
+urllib3
+patool
+pandas
+beautifulsoup4
+humanize
